# applin-rs

./: .gitignore  Cargo.toml  Readme.md
examples/: Readme.md  clock.rs  counter.rs  demo.rs  dynamic_page.rs  minimal.rs  server_state.rs  session_state.rs
examples/demo/: form_widgets.rs  main.rs  pages.rs  photos.rs  updates.rs  vars.rs  widgets.rs
src/: action.rs  action_builders.rs  alert_modal.rs  app.rs  back_button.rs  button.rs  checkbox.rs  column.rs  context.rs  context_set.rs  detail_cell.rs  drawer_modal.rs  empty.rs  error.rs  error_details.rs  form.rs  form_button.rs  form_detail.rs  form_section.rs  h_alignment.rs  info_modal.rs  key_set.rs  lib.rs  list.rs  modal_button.rs  nav_page.rs  page_enum.rs  page_key.rs  pages.rs  plain_page.rs  question_modal.rs  random.rs  rebuilder.rs  rebuilder_map.rs  rebuilder_set.rs  roster.rs  scroll.rs  session.rs  session_cookie.rs  session_id.rs  (+8 more)
src/data/: context_enum.rs  context_set.rs  mod.rs  random.rs  rebuilder_enum.rs  rebuilder_set.rs  roster.rs
src/internal/: action_enum.rs  mod.rs  opt_widget_list.rs  page_enum.rs  widget_enum.rs  widget_list.rs
src/session/: applin_session.rs  key_set.rs  mod.rs  page_map.rs  server_instance_id.rs  session_cookie.rs  session_id.rs  session_set.rs  session_struct.rs  sync_cookie.rs
src/widget/: alert_modal.rs  back_button.rs  button.rs  checkbox.rs  column.rs  drawer_modal.rs  empty.rs  error_details.rs  form.rs  form_button.rs  form_checkbox.rs  form_detail.rs  form_error.rs  form_section.rs  form_text_field.rs  grouped_row_table.rs  h_alignment.rs  image.rs  mod.rs  modal_button.rs  nav_button.rs  nav_page.rs  plain_page.rs  real32.rs  scroll.rs  text.rs  textfield.rs  v_alignment.rs
tests/: action_test.rs  h_alignment_test.rs  page_test.rs  real32_test.rs  server_state_test.rs  static_page_test.rs  util.rs  v_alignment_test.rs  widget_test.rs
tests/util/: mod.rs
