[package]
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
description = "Maggie remote UI server"
categories = ["gui", "network-programming"]
edition = "2021"
keywords = ["mobile", "ui", "reactnative", "flutter"]
license = "MIT OR Apache-2.0"
name = "maggie"
repository = "https://github.com/mleonhard/maggie-rs"
version = "0.1.0"

[dependencies]
beatrice = { version = "^0.2.0", path = "../beatrice-rs", features = ["json"] }
nanorand = { version = "^0.7.0", features = ["alloc", "chacha", "std"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[dev-dependencies]
