[package]
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
description = "Graphical application server with iOS and Android clients"
categories = ["gui", "network-programming"]
edition = "2021"
keywords = ["mobile", "ui", "reactnative", "flutter"]
license = "MIT OR Apache-2.0"
name = "applin"
repository = "https://github.com/mleonhard/applin"
version = "0.1.0"

[dependencies]
servlin = { version = "^0.1.1", path = "../servlin", features = ["json"] }
nanorand = { version = "^0.7.0", features = ["alloc", "chacha", "std"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[dev-dependencies]
ureq = { version = "^2.5", features = ["cookies", "json"] }
