[package]
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
description = "Graphical application server with iOS and Android clients"
categories = ["gui", "network-programming"]
edition = "2021"
keywords = ["mobile", "ui", "reactnative", "flutter"]
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-license-and-license-file-fields
# TODO(mleonhard) Uncomment once Brandeis-2023 is in the SPDX library.
#license = "Brandeis-2023"
name = "applin"
repository = "https://github.com/mleonhard/applin"
version = "0.1.0"

[dependencies]
servlin = { version = "^0.1.1", path = "../servlin", features = ["json"] }
nanorand = { version = "^0.7.0", features = ["alloc", "chacha", "std"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
ureq = { version = "^2.5", features = ["cookies", "json"], optional = true }

[features]
default = []
testing = ["ureq"]

[dev-dependencies]
